chore(deps): update all dependencies